# PostGIS_Yukon_MCP

./: .env.example  .gitignore  API.md  README.md  USAGE.md  pyproject.toml  requirements.txt
docs/: DATA_IMPORT.md  TEXT_TO_SQL.md  VANNA_AUTO_START.md  VANNA_SERVICE_USAGE.md  VANNA_USAGE.md
src/: __init__.py  server.py
src/config/: __init__.py  database.py
src/tools/: __init__.py  admin.py  advanced.py  analysis.py  data_import.py  geometry.py  spatial_query.py  text_to_sql.py  vanna_mcp_adapter.py  vanna_postgis_trainer.py
src/vanna_server/: test_service.py  vanna_postgis.py  vanna_service.py
tests/: test_asyncpg.py  test_data_import.py  test_import_bmR.py  test_resource_access.py  test_resources.py  test_text_to_sql.py  test_tools.py
